--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -151,13 +151,13 @@ button {
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: auto;
         display: flex;
         flex-direction: column;
         text-align: center;
         justify-content: flex-start;
         gap: 2.5rem;
-        background-color: rgb(255 242 229);
+        background-color: #F5F8FF;
         transition: 1s;
         transform: translateY(-100vh);
     }
@@ -201,5 +201,29 @@ button {
         display: flex;
         justify-content: center;
         gap: 35px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .logo {
+        width: 10%;
+    }
+    nav {
+        justify-content: center;
+        width: 80%;
+    }
+    nav ul {
+        width: 40%;
+        font-size: 11px;
+    }
+    nav .twoButtons {
+        width: 40%;
+        text-align: right;
+    }
+    .btnLeft {
+        font-size: 12px;
+    }
+    .btnRight {
+        font-size: 12px;
     }
 }
