--- a/src/Components/title/Title.css
+++ b/src/Components/title/Title.css
@@ -123,3 +123,10 @@ h4 {
         font-size: 26px;
     }
 }
+
+@media (max-width: 1024px) {
+    .TitleSection h2 {
+        font-size: 25px;
+        margin-top: 1px;
+    }
+}
