--- a/src/Components/MiddleSection/GiftCardSection.css
+++ b/src/Components/MiddleSection/GiftCardSection.css
@@ -37,7 +37,7 @@
     color: #667085;
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 940px) {
     .GiftCard {
         display: flex;
         flex-direction: column;
@@ -53,7 +53,9 @@
     }
 }
 
-@media (max-width: 1024px) {
+
+/*
+@media only screen and (min-width: 940px) {
     .GiftCard {
         gap: 36px;
         justify-content: center;
@@ -66,3 +68,4 @@
         font-size: 1.3rem;
     }
 }
+*/
