--- a/src/Components/MiddleSection/MiddleSection.css
+++ b/src/Components/MiddleSection/MiddleSection.css
@@ -80,7 +80,7 @@ button {
     transform: scale(1.1);
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 940px) {
     .MidSec {
         display: flex;
         flex-direction: column;
@@ -109,7 +109,9 @@ button {
     }
 }
 
-@media (max-width: 1024px) {
+
+/*
+@media only screen and (min-width: 940px) {
     .MidSec {
         gap: 395px;
     }
@@ -123,3 +125,5 @@ button {
         width: 16%;
     }
 }
+
+*/
