--- a/src/Components/RewardsSection/Rewards.css
+++ b/src/Components/RewardsSection/Rewards.css
@@ -118,7 +118,7 @@
     width: 440px;
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 940px) {
     .rewardsSection {
         display: flex;
         flex-direction: column-reverse;
@@ -149,7 +149,10 @@
     }
 }
 
-@media (max-width: 1024px) {
+
+/*
+
+@media only screen and (min-width: 940px) {
     .rewardsSection {
         padding: 22px;
         gap: 0;
@@ -169,3 +172,5 @@
         width: 400px;
     }
 }
+
+*/
