--- a/src/Components/SecuritySection.css
+++ b/src/Components/SecuritySection.css
@@ -14,7 +14,7 @@
     margin-top: -80px;
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 940px) {
     .rewardsSectionSecurity {
         display: flex;
         flex-direction: column;
@@ -22,7 +22,9 @@
     }
 }
 
-@media (max-width: 1024px) {
+
+/*
+@media only screen and (min-width: 940px) {
     .rewardsSectionSecurity {
         gap: 43px;
         padding-left: 46px;
@@ -34,3 +36,5 @@
         margin-top: -21px;
     }
 }
+
+*/
