--- a/src/Components/SubscriptionSection/Subscription.css
+++ b/src/Components/SubscriptionSection/Subscription.css
@@ -154,7 +154,7 @@ form {
     transform: scale(0.9);
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 940px) {
     .container {
         display: flex;
         flex-direction: column;
@@ -164,7 +164,9 @@ form {
     .card-image img {}
 }
 
-@media (max-width: 1024px) {
+
+/*
+@media only screen and (min-width: 940px) {
     .container {
         gap: 0;
     }
@@ -190,3 +192,5 @@ form {
         margin-top: 0;
     }
 }
+
+*/
