Revert "Third commit"
This reverts commit e489ea34000659941b393ae52cad1a6f8aad953f.

--- a/src/Components/FaqSection/FaqSection.css
+++ b/src/Components/FaqSection/FaqSection.css
@@ -95,7 +95,7 @@
     display: none;
 }
 
-@media only screen and (max-width: 940px) {
+@media (max-width: 768px) {
     .accordionFaqSection .parent-tab .content p {
         font-size: 12px;
     }
