--- a/src/Components/OurTeamMain/OurTeamMain.css
+++ b/src/Components/OurTeamMain/OurTeamMain.css
@@ -37,7 +37,7 @@
     /*  margin-left: 492px; */
 }
 
-@media only screen and (max-width: 940px) {
+@media (max-width: 768px) {
     .OurTeamMainSection .MidSec {
         gap: 32px;
     }
@@ -54,9 +54,7 @@
     }
 }
 
-
-/*
-@media only screen and (min-width: 940px) {
+@media (max-width: 1024px) {
     .OurTeamMainSection .MidSec {
         gap: 428px;
     }
@@ -72,5 +70,3 @@
         gap: 32px;
     }
 }
-
-*/
