--- a/src/Components/Client/Client.css
+++ b/src/Components/Client/Client.css
@@ -17,7 +17,7 @@
         padding: 30px 37px;
     }
     
-    @media only screen and (max-width: 940px) {
+    @media (max-width: 768px) {
         .clientSection {
             display: flex;
             flex-direction: column;
