--- a/src/Components/MiddleSection/MiddleSection.css
+++ b/src/Components/MiddleSection/MiddleSection.css
@@ -80,7 +80,7 @@ button {
     transform: scale(1.1);
 }
 
-@media only screen and (max-width: 940px) {
+@media (max-width: 768px) {
     .MidSec {
         display: flex;
         flex-direction: column;
@@ -109,9 +109,7 @@ button {
     }
 }
 
-
-/*
-@media only screen and (min-width: 940px) {
+@media (max-width: 1024px) {
     .MidSec {
         gap: 395px;
     }
@@ -125,5 +123,3 @@ button {
         width: 16%;
     }
 }
-
-*/
