--- a/src/Components/RewardsSection/Rewards.css
+++ b/src/Components/RewardsSection/Rewards.css
@@ -118,7 +118,7 @@
     width: 440px;
 }
 
-@media only screen and (max-width: 940px) {
+@media (max-width: 768px) {
     .rewardsSection {
         display: flex;
         flex-direction: column-reverse;
@@ -149,10 +149,7 @@
     }
 }
 
-
-/*
-
-@media only screen and (min-width: 940px) {
+@media (max-width: 1024px) {
     .rewardsSection {
         padding: 22px;
         gap: 0;
@@ -172,5 +169,3 @@
         width: 400px;
     }
 }
-
-*/
