--- a/src/Components/SecuritySection.css
+++ b/src/Components/SecuritySection.css
@@ -14,7 +14,7 @@
     margin-top: -80px;
 }
 
-@media only screen and (max-width: 940px) {
+@media (max-width: 768px) {
     .rewardsSectionSecurity {
         display: flex;
         flex-direction: column;
@@ -22,9 +22,7 @@
     }
 }
 
-
-/*
-@media only screen and (min-width: 940px) {
+@media (max-width: 1024px) {
     .rewardsSectionSecurity {
         gap: 43px;
         padding-left: 46px;
@@ -36,5 +34,3 @@
         margin-top: -21px;
     }
 }
-
-*/
