--- a/src/Components/title/Title.css
+++ b/src/Components/title/Title.css
@@ -99,7 +99,7 @@ h4 {
     margin: 0 auto;
 }
 
-@media only screen and (max-width: 940px) {
+@media (max-width: 768px) {
     .mainImage {
         width: 100%;
         height: 425px;
@@ -124,17 +124,9 @@ h4 {
     }
 }
 
-
-/*
-
-@media only screen and (min-width: 940px) {
+@media (max-width: 1024px) {
     .TitleSection h2 {
         font-size: 25px;
         margin-top: 1px;
     }
-    .btn {
-        margin-top: 22px;
-    }
 }
-
-*/
