--- a/src/Components/FaqSection/FaqSection.css
+++ b/src/Components/FaqSection/FaqSection.css
@@ -95,7 +95,7 @@
     display: none;
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .accordionFaqSection .parent-tab .content p {
         font-size: 12px;
     }
