--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -150,7 +150,7 @@
     transform: scale(1.3);
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .footer-container {
         display: flex;
         flex-direction: column;
