--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -128,7 +128,7 @@ button {
     text-align: center;
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .wrapper {
         display: flex;
         flex-direction: column;
@@ -204,7 +204,7 @@ button {
     }
 }
 
-@media (max-width: 1024px) {
+@media screen and (max-width: 1024px) and (min-width: 768px) {
     .logo {
         width: 10%;
     }
