--- a/src/Components/SecuritySection.css
+++ b/src/Components/SecuritySection.css
@@ -22,7 +22,7 @@
     }
 }
 
-@media (max-width: 1024px) {
+@media screen and (max-width: 1024px) and (min-width:768px) {
     .rewardsSectionSecurity {
         gap: 43px;
         padding-left: 46px;
