--- a/src/Components/SubscriptionSection/Subscription.css
+++ b/src/Components/SubscriptionSection/Subscription.css
@@ -154,7 +154,7 @@ form {
     transform: scale(0.9);
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) and (min-width:768px) {
     .container {
         display: flex;
         flex-direction: column;
