--- a/src/Components/title/Title.css
+++ b/src/Components/title/Title.css
@@ -99,7 +99,7 @@ h4 {
     margin: 0 auto;
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .mainImage {
         width: 100%;
         height: 425px;
@@ -124,7 +124,7 @@ h4 {
     }
 }
 
-@media (max-width: 1024px) {
+@media screen and (max-width: 1024px) and (min-width:768px) {
     .TitleSection h2 {
         font-size: 25px;
         margin-top: 1px;
