--- a/src/Components/FaqSection/FaqSection.css
+++ b/src/Components/FaqSection/FaqSection.css
@@ -34,19 +34,20 @@
 .accordionFaqSection .parent-tab {
     background: #FFFFFF;
     margin-bottom: 18px;
-    box-shadow: 0px 0px 44px rgba(0, 0, 0, 14%);
+    box-shadow: 0px 0px 7px rgb(0 0 0 / 7%);
+    ;
     border-radius: 10px;
 }
 
 .accordionFaqSection .parent-tab label {
-    padding: 10px 20px;
+    padding: 15px 25px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
     border-radius: 3px;
     z-index: 99;
-    border: 1px solid #BFBFBF;
+    border: 1px solid #00000026;
     border-radius: 10px;
 }
 
@@ -63,6 +64,10 @@
     height: 12px;
     width: 15px;
     color: #667085;
+}
+
+.accordionFaqSection input {
+    display: none;
 }
 
 .accordionFaqSection input:checked~label .icon img:before {
@@ -89,10 +94,6 @@
     font-size: 13px;
     line-height: 22px;
     letter-spacing: 0.2px;
-}
-
-.accordionFaqSection input {
-    display: none;
 }
 
 @media screen and (max-width: 768px) {
