--- a/src/Components/Client/Client.css
+++ b/src/Components/Client/Client.css
@@ -14,10 +14,10 @@
     .clientSection img {
         width: 16.67%;
         height: auto;
-        padding: 15px 62px;
+        padding: 14px 63px;
     }
     
-    @media screen and (max-width: 768px) {
+    @media (max-width: 768px) {
         .clientSection {
             display: flex;
             flex-direction: column;
