--- a/src/Components/FaqSection/FaqSection.css
+++ b/src/Components/FaqSection/FaqSection.css
@@ -34,20 +34,19 @@
 .accordionFaqSection .parent-tab {
     background: #FFFFFF;
     margin-bottom: 18px;
-    box-shadow: 0px 0px 7px rgb(0 0 0 / 7%);
-    ;
+    box-shadow: 0px 0px 8px rgb(0 0 0 / 8%);
     border-radius: 10px;
 }
 
 .accordionFaqSection .parent-tab label {
-    padding: 15px 25px;
+    padding: 16px 26px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
     border-radius: 3px;
     z-index: 99;
-    border: 1px solid #00000026;
+    border: 1.1px solid #00000029;
     border-radius: 10px;
 }
 
@@ -96,7 +95,7 @@
     letter-spacing: 0.2px;
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
     .accordionFaqSection .parent-tab .content p {
         font-size: 12px;
     }
