--- a/src/Components/MiddleSection/MiddleSection.css
+++ b/src/Components/MiddleSection/MiddleSection.css
@@ -75,12 +75,12 @@ button {
 .midBtn:hover,
 .midBtn:focus,
 .midBtn:active {
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.14);
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
     .MidSec {
         display: flex;
         flex-direction: column;
@@ -109,7 +109,7 @@ button {
     }
 }
 
-@media screen and (max-width: 1024px) and (min-width: 768px) {
+@media (min-width: 769px) and (max-width: 1023px) {
     .MidSec {
         gap: 395px;
     }
