--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -14,14 +14,14 @@
 nav {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
 }
 
 .logo {
     width: 20%;
     height: 50px;
-    text-align: center;
+    text-align: left;
 }
 
 .logo img {
@@ -31,7 +31,6 @@ nav {
 nav ul {
     display: flex;
     list-style: none;
-    width: 70%;
     justify-content: center;
 }
 
@@ -129,7 +128,10 @@ button {
     text-align: center;
 }
 
-@media screen and (max-width: 768px) {
+
+/*----------Mobile phones-------------*/
+
+@media (max-width: 768px) {
     .wrapper {
         display: flex;
         flex-direction: column;
@@ -190,7 +192,7 @@ button {
     nav ul li a:hover {
         color: blue;
     }
-    .logo {
+    .wrapper .logo {
         height: 50px;
         text-align: center;
         width: 100%;
@@ -202,19 +204,27 @@ button {
         display: flex;
         justify-content: center;
         gap: 35px;
+        margin-bottom: 40px;
     }
 }
 
-@media screen and (max-width: 1024px) and (min-width: 768px) {
+
+/*-----------Desktop and Laptops-----------*/
+
+@media (min-width: 1024px) {}
+
+
+/*------------Tablets and iPads--------------*/
+
+@media (min-width: 769px) and (max-width: 1023px) {
     .logo {
-        width: 10%;
+        text-align: center;
     }
     nav {
-        justify-content: center;
-        width: 80%;
+        justify-content: space-around;
+        width: 100%;
     }
     nav ul {
-        width: 40%;
         font-size: 11px;
     }
     nav .twoButtons {
