--- a/src/Components/OurTeamMain/OurTeamMain.css
+++ b/src/Components/OurTeamMain/OurTeamMain.css
@@ -37,7 +37,7 @@
     /*  margin-left: 492px; */
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
     .OurTeamMainSection .MidSec {
         gap: 32px;
     }
@@ -54,7 +54,7 @@
     }
 }
 
-@media acreen and (max-width: 1024px) and (min-width:768px) {
+@media (min-width: 769px) and (max-width: 1023px) {
     .OurTeamMainSection .MidSec {
         gap: 428px;
     }
