--- a/src/Components/RewardsSection/Rewards.css
+++ b/src/Components/RewardsSection/Rewards.css
@@ -33,7 +33,7 @@
 }
 
 .right-leftRewardsSection1 {
-    border: 2.3px dashed #C4C4C4;
+    border: 2.2px dashed #C4C4C4;
     border-radius: 10px;
     margin-top: 32px;
 }
@@ -67,16 +67,16 @@
 
 .right-leftRewardsSection1 button {
     margin-top: 20px;
-    margin-left: 25px;
+    margin-left: 26px;
 }
 
 .right-leftRewardsSection1 ul {
     margin-top: 22px;
-    margin-left: 25px;
+    margin-left: 26px;
     font-size: 14px;
     color: #667085;
     list-style: none;
-    margin-bottom: 33px;
+    margin-bottom: 34px;
 }
 
 .right-leftRewardsSection1 ul li {
@@ -119,7 +119,7 @@
     width: 440px;
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
     .rewardsSection {
         display: flex;
         flex-direction: column-reverse;
@@ -150,7 +150,7 @@
     }
 }
 
-@media screen and (max-width: 1024px) and (min-width:768px) {
+@media (min-width: 769px) and (max-width: 1023px) {
     .rewardsSection {
         padding: 22px;
         gap: 0;
