--- a/src/Components/SecuritySection.css
+++ b/src/Components/SecuritySection.css
@@ -22,7 +22,7 @@
     }
 }
 
-@media screen and (max-width: 1024px) and (min-width:768px) {
+@media (min-width: 769px) and (max-width: 1023px) {
     .rewardsSectionSecurity {
         gap: 43px;
         padding-left: 46px;
