--- a/src/Components/SecuritySection.css
+++ b/src/Components/SecuritySection.css
@@ -14,6 +14,14 @@
     margin-top: -80px;
 }
 
+@media (max-width:540px) {
+    .rightRewardsSectionSecurity img {
+        height: 340px;
+        margin-top: -115px;
+        padding: 5px 25px;
+    }
+}
+
 @media (max-width: 768px) {
     .rewardsSectionSecurity {
         display: flex;
