--- a/src/Components/Title2/Title2.css
+++ b/src/Components/Title2/Title2.css
@@ -18,6 +18,15 @@
     color: #667085;
 }
 
+@media (max-width:540px) {
+    .title2Section h2 {
+        font-size: 22px;
+    }
+    .title2Section p {
+        padding: 8px 29px;
+    }
+}
+
 @media (min-width: 769px) and (max-width: 1023px) {
     .title2Section {
         margin-top: 70px;
