--- a/src/Components/FaqSection/FaqSection.css
+++ b/src/Components/FaqSection/FaqSection.css
@@ -95,13 +95,7 @@
     letter-spacing: 0.2px;
 }
 
-@media (max-width:540px) {
-    .accordionFaqSection {
-        padding: 10px 45px;
-    }
-}
-
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
     .accordionFaqSection .parent-tab .content p {
         font-size: 12px;
     }
@@ -111,5 +105,11 @@
     .accordionFaqSection label .icon {
         height: 8px;
         width: 12px;
+    }
+}
+
+@media only screen and (max-width:540px) {
+    .accordionFaqSection {
+        padding: 10px 45px;
     }
 }
