--- a/src/Components/OurTeamMain/OurTeamMain.css
+++ b/src/Components/OurTeamMain/OurTeamMain.css
@@ -37,17 +37,25 @@
     /*  margin-left: 492px; */
 }
 
-@media (max-width:540px) {
-    .ourTeamSectionTop {
-        gap: 55px;
-        padding-bottom: 55px;
-    }
-    .ourTeamSectionBottom {
-        gap: 55px;
+@media only screen and (max-width:1040px) {
+    .OurTeamMainSection .MidSec {
+        gap: 425px;
     }
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 995px) {
+    .OurTeamMainSection .MidSec {
+        gap: 300px;
+    }
+}
+
+@media only screen and (max-width: 912px) {
+    .OurTeamMainSection .MidSec {
+        gap: 300px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
     .OurTeamMainSection .MidSec {
         gap: 32px;
     }
@@ -64,19 +72,12 @@
     }
 }
 
-@media (min-width: 769px) and (max-width: 1023px) {
-    .OurTeamMainSection .MidSec {
-        gap: 428px;
-    }
-    .ourTeamSection {
-        padding-left: 55px;
-        padding-right: 55px;
-    }
+@media only screen and (max-width:540px) {
     .ourTeamSectionTop {
-        gap: 32px;
-        padding-bottom: 32px;
+        gap: 55px;
+        padding-bottom: 55px;
     }
     .ourTeamSectionBottom {
-        gap: 32px;
+        gap: 55px;
     }
 }
