--- a/src/Components/SecuritySection.css
+++ b/src/Components/SecuritySection.css
@@ -14,23 +14,7 @@
     margin-top: -80px;
 }
 
-@media (max-width:540px) {
-    .rightRewardsSectionSecurity img {
-        height: 340px;
-        margin-top: -115px;
-        padding: 5px 25px;
-    }
-}
-
-@media (max-width: 768px) {
-    .rewardsSectionSecurity {
-        display: flex;
-        flex-direction: column;
-        gap: 130px;
-    }
-}
-
-@media (min-width: 769px) and (max-width: 1023px) {
+@media only screen and (max-width: 1024px) {
     .rewardsSectionSecurity {
         gap: 43px;
         padding-left: 46px;
@@ -40,5 +24,21 @@
         width: 97%;
         height: 335px;
         margin-top: -21px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .rewardsSectionSecurity {
+        display: flex;
+        flex-direction: column;
+        gap: 130px;
+    }
+}
+
+@media only screen and (max-width:540px) {
+    .rightRewardsSectionSecurity img {
+        height: 340px;
+        margin-top: -115px;
+        padding: 5px 25px;
     }
 }
