--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -150,7 +150,31 @@
     transform: scale(1.3);
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 1024px) {
+    .footer-left {
+        text-indent: 26px;
+        width: 30%;
+    }
+    .footer-left h1 {
+        font-size: 25px;
+    }
+    .box a {
+        font-size: 14px;
+    }
+    .footer-right {
+        width: 70%;
+        gap: 0;
+        justify-content: space-around;
+    }
+    .footer-bottom p {
+        margin-left: 0;
+    }
+    .footer-bottom a {
+        font-size: 14px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
     .footer-container {
         display: flex;
         flex-direction: column;
@@ -188,29 +212,5 @@
     }
     .footer-bottom li {
         padding: 18px;
-    }
-}
-
-@media (min-width: 769px) and (max-width: 1023px) {
-    .footer-left {
-        text-indent: 26px;
-        width: 30%;
-    }
-    .footer-left h1 {
-        font-size: 25px;
-    }
-    .box a {
-        font-size: 14px;
-    }
-    .footer-right {
-        width: 70%;
-        gap: 0;
-        justify-content: space-around;
-    }
-    .footer-bottom p {
-        margin-left: 0;
-    }
-    .footer-bottom a {
-        font-size: 14px;
     }
 }
