--- a/src/Components/MiddleSection/MiddleSection.css
+++ b/src/Components/MiddleSection/MiddleSection.css
@@ -80,29 +80,46 @@ button {
     transform: scale(1.1);
 }
 
-@media (max-width: 540px) {
+@media only screen and (max-width:1155px) {
     .MidSec {
-        gap: 20px;
+        gap: 454px;
+    }
+}
+
+@media only screen and (max-width: 1080px) {
+    .MidSec {
+        gap: 380px;
+    }
+}
+
+@media only screen and (max-width: 1040px) {
+    .MidSec {
+        gap: 350px;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .MidSec {
+        gap: 395px;
     }
     .MidSecTitle {
-        font-size: 25px;
+        font-size: 22px;
     }
     .MidSecTitle span {
         font-size: 16px;
     }
     .midBtn {
-        width: 23%;
-        height: 38px;
-    }
-    .midBtn h3 {
-        font-size: 12px;
-    }
-    .midBtn img {
-        width: 23%;
+        width: 16%;
     }
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 820px) {
+    .MidSec {
+        gap: 267px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
     .MidSec {
         display: flex;
         flex-direction: column;
@@ -131,17 +148,24 @@ button {
     }
 }
 
-@media (min-width: 769px) and (max-width: 1023px) {
+@media only screen and (max-width: 540px) {
     .MidSec {
-        gap: 395px;
+        gap: 20px;
     }
     .MidSecTitle {
-        font-size: 22px;
+        font-size: 25px;
     }
     .MidSecTitle span {
         font-size: 16px;
     }
     .midBtn {
-        width: 16%;
+        width: 23%;
+        height: 38px;
+    }
+    .midBtn h3 {
+        font-size: 12px;
+    }
+    .midBtn img {
+        width: 23%;
     }
 }
