--- a/src/Components/title/Title.css
+++ b/src/Components/title/Title.css
@@ -99,27 +99,14 @@ h4 {
     margin: 0 auto;
 }
 
-@media (max-width: 540px) {
+@media only screen and (max-width: 1024px) {
     .TitleSection h2 {
-        font-size: 24px;
-        padding: 24px;
-        margin-top: 0;
-    }
-    .btn {
-        width: 169px;
-    }
-    .btn h3 {
-        font-size: 12px;
-    }
-    .btn img {
-        width: 18%;
-    }
-    .mainImage {
-        height: 355px;
+        font-size: 25px;
+        margin-top: 1px;
     }
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
     .mainImage {
         width: 100%;
         height: 425px;
@@ -144,9 +131,23 @@ h4 {
     }
 }
 
-@media (min-width: 769px) and (max-width: 1023px) {
+@media only screen and (max-width: 540px) {
     .TitleSection h2 {
-        font-size: 25px;
-        margin-top: 1px;
+        font-size: 24px;
+        padding: 24px;
+        margin-top: 0;
+    }
+    .btn {
+        width: 169px;
+        margin-top: 0;
+    }
+    .btn h3 {
+        font-size: 12px;
+    }
+    .btn img {
+        width: 18%;
+    }
+    .mainImage {
+        height: 355px;
     }
 }
