--- a/src/Components/RewardsSection/Rewards.css
+++ b/src/Components/RewardsSection/Rewards.css
@@ -233,13 +233,51 @@
 }
 
 @media only screen and (max-width:280px) {
+    .rewardsSection {
+        margin-top: 30px;
+    }
     .rightRewardsSection img {
-        width: 241px;
+        width: 218px;
+        height: 140px;
+        margin-bottom: 30px;
     }
     .rightRewardsSection1 img {
         width: 241px;
     }
     .leftRewardsSection {
-        width: 256px;
+        width: 252px;
+        gap: 10px;
+    }
+    .right-leftRewardsSection span {
+        font-size: 13px;
+    }
+    .right-leftRewardsSection h2 {
+        font-size: 17px;
+        margin-bottom: 5px;
+        margin-top: 5px;
+    }
+    .right-leftRewardsSection p {
+        font-size: 12px;
+    }
+    .right-leftRewardsSection1 {
+        margin-top: 18px;
+    }
+    .right-leftRewardsSection1 button {
+        margin-top: 10px;
+        margin-left: 12px;
+    }
+    .right-leftRewardsSection1 ul {
+        margin-left: 12px;
+        margin-top: 10px;
+        margin-bottom: 12px;
+    }
+    .checkIcon {
+        font-size: 18px;
+    }
+    .right-leftRewardsSection1 ul li {
+        font-size: 12px;
+    }
+    .Vline {
+        height: 400px;
     }
 }
