--- a/src/Components/Client/Client.css
+++ b/src/Components/Client/Client.css
@@ -34,3 +34,10 @@
             border: 1px solid #00000014;
         }
     }
+    
+    @media only screen and (max-width: 280px) {
+        .clientSection img {
+            padding: 27px 3px;
+            width: 45%;
+        }
+    }
