--- a/src/Components/FaqSection/FaqSection.css
+++ b/src/Components/FaqSection/FaqSection.css
@@ -113,3 +113,26 @@
         padding: 10px 45px;
     }
 }
+
+@media only screen and (max-width:280px) {
+    .FaqTitle h2 {
+        font-size: 21.1px;
+        letter-spacing: 0;
+    }
+    .FaqTitle p {
+        font-size: 13.3px;
+    }
+    .accordionFaqSection {
+        margin-bottom: 50px;
+        padding: 0 28px;
+    }
+    .accordionFaqSection label span {
+        font-size: 12px;
+    }
+    .accordionFaqSection .parent-tab label {
+        padding: 7px 18px;
+    }
+    .accordionFaqSection .parent-tab .content p {
+        padding: 0px 17px;
+    }
+}
