--- a/src/Components/OurTeam/OurTeam.css
+++ b/src/Components/OurTeam/OurTeam.css
@@ -51,3 +51,10 @@
     margin-top: 22px;
     margin-bottom: 12px;
 }
+
+@media only screen and (max-width:280px) {
+    .OurTeamCard {
+        width: 80%;
+        margin: 0 auto;
+    }
+}
