--- a/src/Components/OurTeamMain/OurTeamMain.css
+++ b/src/Components/OurTeamMain/OurTeamMain.css
@@ -81,3 +81,10 @@
         gap: 55px;
     }
 }
+
+@media only screen and (max-width:280px) {
+    .OurTeamMainSection .MidSec {
+        gap: 20px;
+        margin-bottom: 62px;
+    }
+}
