--- a/src/Components/SecuritySection.css
+++ b/src/Components/SecuritySection.css
@@ -42,3 +42,14 @@
         padding: 5px 25px;
     }
 }
+
+@media only screen and (max-width:280px) {
+    .rewardsSectionSecurity {
+        margin-top: 60px;
+    }
+    .rightRewardsSectionSecurity img {
+        height: 170px;
+        width: 240px;
+        padding: 0;
+    }
+}
