--- a/src/Components/title/Title.css
+++ b/src/Components/title/Title.css
@@ -151,3 +151,24 @@ h4 {
         height: 355px;
     }
 }
+
+@media only screen and (max-width: 280px) {
+    .TitleSection h2 {
+        font-size: 19px;
+        padding: 17px;
+        margin-top: 0;
+    }
+    .mainImage {
+        height: 175px;
+        margin-top: 20px
+    }
+    .btn {
+        width: 142px;
+    }
+    .btn img {
+        width: 22%;
+    }
+    .btn h3 {
+        font-size: 9px;
+    }
+}
