--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -218,13 +218,36 @@
     }
 }
 
-@media only screen and (max-width: 280px) {
+@media only screen and (max-width:650px) {
     .footer-right {
+        display: flex;
+        flex-direction: column;
         text-indent: 27px;
-        gap: 3rem;
+        gap: 1.5rem;
     }
     .footer-bottom {
         text-indent: 27px;
+    }
+    .footer-bottom p {
+        font-size: 11.3px;
+    }
+    .footer-bottom li {
+        line-height: 0;
+    }
+}
+
+@media only screen and (max-width: 280px) {
+    .footer-right {
+        display: flex;
+        flex-direction: column;
+        text-indent: 27px;
+        gap: 1.5rem;
+    }
+    .footer-bottom {
+        text-indent: 27px;
+    }
+    .footer-bottom p {
+        font-size: 11.3px;
     }
     .footer-bottom li {
         line-height: 0;
