--- a/src/Components/MiddleSection/GiftCardSection.css
+++ b/src/Components/MiddleSection/GiftCardSection.css
@@ -97,9 +97,12 @@
         justify-content: center;
         align-items: center;
         gap: 65px;
+        padding: 0;
+        margin-top: 55px;
     }
     .GiftCardsContent {
         width: 100%;
+        margin-bottom: 30px;
     }
     .GiftCardsContent img {
         width: 95%;
@@ -113,16 +116,4 @@
     }
 }
 
-@media only screen and (max-width: 768px) {
-    .GiftCard {
-        padding: 0;
-        margin-top: 55px;
-    }
-    .GiftCardsContent {
-        width: 450px;
-        margin-bottom: 30px;
-    }
-    .GiftCardsContent img {
-        width: 95%;
-    }
-}
+@media only screen and (max-width: 280px) {}
