--- a/src/Components/SubscriptionSection/Subscription.css
+++ b/src/Components/SubscriptionSection/Subscription.css
@@ -292,6 +292,17 @@ form {
         width: 126px;
         padding: 6px;
     }
+    .btnDemo a {
+        justify-content: center;
+        align-items: center;
+    }
+    .btnDemo h3 {
+        font-size: 10px;
+        margin-left: 0;
+    }
+    .btnDemo .btnDemoImage {
+        font-size: 25px;
+    }
     .FrameContent {
         margin-top: -146px;
     }
@@ -311,12 +322,16 @@ form {
         font-size: 12px;
         margin-top: 1px;
     }
+    form {
+        margin: 0;
+    }
     .emailInput {
         border-radius: 10px;
         height: 28px;
         width: 85%;
         border-radius: 10px;
         margin-top: 18px;
+        font-size: 10px;
     }
     .submitInput {
         border-radius: 5px;
@@ -324,5 +339,6 @@ form {
         height: 20px;
         width: 75px;
         margin-top: 18px;
+        font-size: 9px;
     }
 }
